# code-buddy

./: .dockerignore  .env.example  .gitignore  .npmignore  AGENTS.md  AUDIT-AGENT-COLLABORATION.md  AUDIT-MODE-AUTONOME.md  AUTOPILOT-STATE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PHASE2-CIRCULAR-DEPS.md  PR-42-AMELIORATIONS.md  README.md  RELEASING.md  SECURITY.md  SMOKE-TEST-2026-05-29.md  docker-compose.yml  eslint.config.js  fix-imports.cjs  install.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.codebuddy/: CODEBUDDY_MEMORY.md  code-graph.json  mcp.json  repoProfile.json
.omx/: notepad.md
buddy-memory/: Cargo.toml  README.md
buddy-memory/src/: embed.rs  main.rs  model.rs  store.rs
buddy-scrapling/: README.md  requirements.txt  scrape.py  setup.sh
buddy-sense/: .gitignore  Cargo.toml  README.md  demo.sh
buddy-vision/: README.md  ear.py  sensory-rules.example.json  setup.sh  test_watch.py  watch.py
cowork/: .eslintrc.cjs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEV-LINUX.md  REDESIGN.md  RUNNER_AUDIT.md  electron-builder.yml  index.html  launch-cowork.sh  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
docs/: AUTONOMOUS-SYSTEM-ROADMAP.md  MISSION-ORCHESTRATOR-PHASE1-PLAN.md  acp-editor-integration.md  agentic-coding-cell.md  agentic-loop-goal-parity-2026-06-16.md  application-validation-guide.md  autonomous-coding-cowork-progress.md  avatar-metahuman-protocol.md  channels.md  code-explorer-README.draft.md  code-explorer-README.fr.draft.md  code-explorer-integration.md  cognitive-mesh.md  commands.md  companion-guide.md  computer-use-application-profiles.md  configuration.md  cowork-competitor-audit.md  cowork-pilotability-matrix.md  cowork.md  deployment.md  faq.md  fleet-guide.md  fleet-roadmap-v1.x.md  getting-started.md  gpu-media-worker.md  hermes-agent-next-todo.md  launch-kit.md  (+23 more)
src-captured/: Cargo.toml
src-captured/src/: main.rs
(+3305 files in other folders)
