[package]
name = "buddy-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust engine for Code Buddy's Collective Knowledge Graph (CKG) — graph memory with bi-temporal supersede, cross-agent corroboration, and hybrid retrieval. In-tree Rust sidecar of Code Buddy (like buddy-sense); all-permissive deps."
repository = "https://github.com/phuetz/code-buddy"
authors = ["Patrick Huetz"]

[[bin]]
name = "buddy-memory"
path = "src/main.rs"

[features]
# Hybrid (semantic) recall via ONNX embeddings. Off by default → keyword recall, light build.
embeddings = ["dep:ort", "dep:tokenizers"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

[profile.release]
opt-level = 3
lto = "thin"
